# libnoise

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/: CMakeLists.txt  Doxyfile
doc/htmldata/: doxygen.css  templatefooter.html  templateheader.html
examples/: README  complexplanet.cpp  texturegranite.cpp  texturejade.cpp  texturesky.cpp  textureslime.cpp  texturewood.cpp  worms.cpp
src/model/: cylinder.cpp  line.cpp  plane.cpp  sphere.cpp
src/module/: abs.cpp  add.cpp  billow.cpp  blend.cpp  cache.cpp  checkerboard.cpp  clamp.cpp  const.cpp  curve.cpp  cylinders.cpp  displace.cpp  exponent.cpp  invert.cpp  max.cpp  min.cpp  modulebase.cpp  multiply.cpp  perlin.cpp  power.cpp  ridgedmulti.cpp  rotatepoint.cpp  scalebias.cpp  scalepoint.cpp  select.cpp  spheres.cpp  terrace.cpp  translatepoint.cpp  turbulence.cpp  voronoi.cpp
src/win32/: dllmain.cpp  libnoise.def  noise.rc  resource.h
